--- a/componets/movies-section/styles.module.scss
+++ b/componets/movies-section/styles.module.scss
@@ -16,7 +16,7 @@
     padding: 0 20px;
 
     .movie {
-      // overflow: hidden;
+      overflow: hidden;
       border-radius: 8px;
       position: relative;
       box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.5);
@@ -24,7 +24,7 @@
 
       &:hover {
         z-index: 9;
-        transform: scale(1.15);
+        transform: scale(1.10);
       }
     }
   }
